--- a/app/src/main/res/drawable/yuanjiao.xml
+++ b/app/src/main/res/drawable/yuanjiao.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#00000000"/>
-    <corners android:radius="5dp" />
-    <stroke
-        android:width="2px"
-        android:color="#cccccc" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <!-- 填充颜色 -->
+    <solid android:color="#FFFFFF"></solid>
+
+    <!-- 线的宽度，颜色灰色 -->
+    <stroke android:width="1dp" android:color="#BBBBBB"></stroke>
+
+    <!-- 矩形的圆角半径 -->
+    <corners android:radius="20dp" />
+
 </shape>
